infrastructure/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opnbnk4
  labels:
    app.kubernetes.io/name: opnbnk4
