infrastructure/k8s/base/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: opnbnk4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
        - name: account-service
          image: ghcr.io/shellworlds/opnbnk4-account-service:v0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "2"
              memory: "1536Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: opnbnk4
spec:
  selector:
    app: account-service
  ports:
    - port: 8081
      targetPort: 8081
